--- a/dot_config/hypr/conf/decoration.conf
+++ b/dot_config/hypr/conf/decoration.conf
@@ -1,13 +1,16 @@
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
 decoration {
+    active_opacity = 1.0      # Fully opaque for focused windows
+    inactive_opacity = 0.90    # Reduce opacity for unfocused windows
     rounding = 10
+
     blur {
         enabled = true
         size = 3
         passes = 1
     }
     shadow {
-        enabled = true
+        enabled = false
         range = 4
         render_power = 3
         color = rgba(1a1a1aee)
