--- a/dot_config/hypr/conf/autostart.conf
+++ b/dot_config/hypr/conf/autostart.conf
@@ -1,7 +1,8 @@
 # Execute your favorite apps at launch
 exec-once = waybar
-exec-once = hyprpaper
 exec-once = dunst
+exec-once = hypridle
+exec-once = hyprpaper
 
 # Load configuration from ML4W Hyprland Settings App
 exec = ~/.config/ml4w-hyprland-settings/hyprctl.sh
