--- a/dot_config/hypr/conf/binds.conf
+++ b/dot_config/hypr/conf/binds.conf
@@ -11,13 +11,12 @@ bind = $mainMod, E, exec, ~/.config/ml4w/settings/filemanager.sh # Opens the fil
 bind = $mainMod, T, togglefloating # Toggle between tiling and floating window
 bind = $mainMod, F, fullscreen # Open the window in fullscreen
 bind = $mainMod, SPACE, exec, ~/.config/rofi/launchers/type-4/launcher.sh # Open rofi
-bind = $mainMod, P, pseudo, # dwindle
-# bind = $mainMod, J, togglesplit, # dwindle
+# bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainMod, B, exec, ~/.config/ml4w/settings/browser.sh # Opens the browser
 bind = $mainMod SHIFT, B, exec, ~/.config/ml4w/scripts/reload-waybar.sh # Reload Waybar
 bind = $mainMod SHIFT, W, exec, ~/.config/ml4w/scripts/reload-hyprpaper.sh # Reload hyprpaper after a changing the wallpaper
-
-bind = $mainMod SHIFT, L, exec, hyprlock --immediate # 
+bind = $mainMod CTRL, L, exec, hyprlock --immediate # Lock
 
 bind = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+
 bind = , XF86AudioLowerVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%-
@@ -28,7 +27,7 @@ bind = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bind = , XF86WLAN, exec, nmcli radio wifi toggle
 bind = , XF86Refresh, exec, xdotool key F5
 
-# Move focus with mainMod + arrow keys
+# Move focus with mainMod
 bind = $mainMod, h, movefocus, l # Move focus left
 bind = $mainMod, l, movefocus, r # Move focus right
 bind = $mainMod, k, movefocus, u # Move focus up
@@ -45,6 +44,12 @@ bind = $mainMod, 7, workspace, 7 # Switch to workspace 7
 bind = $mainMod, 8, workspace, 8 # Switch to workspace 8
 bind = $mainMod, 9, workspace, 9 # Switch to workspace 9
 bind = $mainMod, 0, workspace, 10 # Switch to workspace 10
+
+# reposition windows
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1 #  Move window to workspace 1
