fix: bind powerbutton to wlogout

--- a/dot_config/hypr/conf/binds.conf
+++ b/dot_config/hypr/conf/binds.conf
@@ -33,6 +33,8 @@ bind = $mainMod, l, movefocus, r # Move focus right
 bind = $mainMod, k, movefocus, u # Move focus up
 bind = $mainMod, j, movefocus, d # Move focus down
 
+bind = ,xf86poweroff, exec, wlogout
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1 # Switch to workspace 1
 bind = $mainMod, 2, workspace, 2 # Switch to workspace 2
