--- a/dot_config/hypr/conf/binds.conf
+++ b/dot_config/hypr/conf/binds.conf
@@ -33,6 +33,13 @@ bind = $mainMod, l, movefocus, r # Move focus right
 bind = $mainMod, k, movefocus, u # Move focus up
 bind = $mainMod, j, movefocus, d # Move focus down
 
+# Resize windows
+bind = $mainMod ALT, H,resizeactive, -100 0
+bind = $mainMod ALT, L, resizeactive, 100 0
+bind = $mainMod ALT, K, resizeactive, 0 -100
+bind = $mainMod ALT, J, resizeactive, 0 100
+
+# power button to trigger wlogout
 bind = ,xf86poweroff, exec, wlogout
 
 # Switch workspaces with mainMod + [0-9]
