feat: add keybind to hide waybar

--- a/dot_config/hypr/conf/binds.conf
+++ b/dot_config/hypr/conf/binds.conf
@@ -27,6 +27,9 @@ bind = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bind = , XF86WLAN, exec, nmcli radio wifi toggle
 bind = , XF86Refresh, exec, xdotool key F5
 
+# Hide waybar
+bind = $mainMod, ESCAPE, exec, killall -SIGUSR1 waybar
+
 # Move focus with mainMod
 bind = $mainMod, h, movefocus, l # Move focus left
 bind = $mainMod, l, movefocus, r # Move focus right
