feat: hide waybar on startup

--- a/dot_config/hypr/conf/autostart.conf
+++ b/dot_config/hypr/conf/autostart.conf
@@ -4,5 +4,4 @@ exec-once = dunst
 exec-once = hypridle
 exec-once = hyprpaper
 
-# Load configuration from ML4W Hyprland Settings App
-exec = ~/.config/ml4w-hyprland-settings/hyprctl.sh
+exec-once = sleep 3; ~/.config/hypr/scripts/hide-waybar.sh
