--- a/dot_config/hypr/hyprlock.conf
+++ b/dot_config/hypr/hyprlock.conf
@@ -25,12 +25,12 @@ input-field {
     font_color = rgba(255, 255, 255, 0.9)
     fade_on_empty = true
     fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
-    placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
+    placeholder_text =
     hide_input = false
     rounding = 10 # -1 means complete rounding (circle/oval)
     check_color = rgb(204, 136, 34)
     fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
-    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
+    fail_text =
     fail_transition = 0 # transition time in ms between normal outer_color and fail_color
     capslock_color = -1
     numlock_color = -1
