--- a/dot_oh-my-zsh/custom/plugins/zsh-autocomplete/dot_git/config
+++ b/dot_oh-my-zsh/custom/plugins/zsh-autocomplete/dot_git/config
@@ -5,7 +5,4 @@
 	logallrefupdates = true
 [remote "origin"]
 	url = https://github.com/marlonrichert/zsh-autocomplete.git
-	fetch = +refs/heads/main:refs/remotes/origin/main
-[branch "main"]
-	remote = origin
-	merge = refs/heads/main
+	fetch = +refs/heads/*:refs/remotes/origin/*
