feat: re-enable pseudo in case i need it

--- a/dot_config/hypr/conf/binds.conf
+++ b/dot_config/hypr/conf/binds.conf
@@ -11,7 +11,7 @@ bind = $mainMod, E, exec, ~/.config/ml4w/settings/filemanager.sh # Opens the fil
 bind = $mainMod, T, togglefloating # Toggle between tiling and floating window
 bind = $mainMod, F, fullscreen # Open the window in fullscreen
 bind = $mainMod, SPACE, exec, ~/.config/rofi/launchers/type-4/launcher.sh # Open rofi
-# bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainMod, B, exec, ~/.config/ml4w/settings/browser.sh # Opens the browser
 bind = $mainMod SHIFT, B, exec, ~/.config/ml4w/scripts/reload-waybar.sh # Reload Waybar
