--- a/dot_config/hypr/hyprland/general.conf
+++ b/dot_config/hypr/hyprland/general.conf
@@ -1,6 +1,5 @@
 # MONITOR CONFIG
-monitor=DP-3,2560x1440@75,0x0,1
-monitor=DP-1,1920x1080@165,2560x180,1
+monitor=,preferred,auto,1
 # monitor=,addreserved, 0, 0, 0, 0 # Custom reserved area
 
 # HDMI port: mirror display. To see device name, use `hyprctl monitors`
