--- a/dot_config/hypr/custom/general.conf
+++ b/dot_config/hypr/custom/general.conf
@@ -1,18 +1,20 @@
 # Put general config stuff here
 # Here's a list of every variable: https://wiki.hyprland.org/Configuring/Variables/
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
-monitor=DP-3,2560x1440@75,0x0,1
-monitor=DP-1,1920x1080@165,2560x180,1
+monitor=,2880x1800@60,auto,1
 
 input {
-    kb_options = caps:swapescape
-    kb_rules =
-    follow_mouse = 0
-    accel_profile = flat
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+  touchpad {
+    drag_lock = true
+  }
+  kb_options = caps:swapescape
+  kb_rules =
+  follow_mouse = 0
+  accel_profile = flat
+  sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
 decoration {
-    active_opacity = 1.0      # Fully opaque for focused windows
-    inactive_opacity = 0.90    # Reduce opacity for unfocused windows
+  active_opacity = 1.0      # Fully opaque for focused windows
+  inactive_opacity = 0.90    # Reduce opacity for unfocused windows
 }
