fix: 12h time format

--- a/dot_config/hypr/hyprlock.conf
+++ b/dot_config/hypr/hyprlock.conf
@@ -36,7 +36,7 @@ input-field {
 
 label { # Clock
     monitor =
-    text = $TIME
+    text = $TIME12
     shadow_passes = 1
     shadow_boost = 0.5
     color = $text_color
