--- a/dot_config/hypr/custom/general.conf
+++ b/dot_config/hypr/custom/general.conf
@@ -1,7 +1,9 @@
 # Put general config stuff here
 # Here's a list of every variable: https://wiki.hyprland.org/Configuring/Variables/
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
-monitor=,2880x1800@60,auto,1
+monitor= eDP-1 ,2880x1800@60,auto,1
+monitor = , preferred, auto, 1, mirror, eDP-1
+
 
 input {
   touchpad {
@@ -15,6 +17,19 @@ input {
 }
 
 decoration {
-  active_opacity = 1.0      # Fully opaque for focused windows
-  inactive_opacity = 0.90    # Reduce opacity for unfocused windows
+    blur {
+        enabled = true
+        xray = true
+        special = false
+        new_optimizations = true
+        size = 1
+        passes = 5
+        brightness = 1
+        noise = 0.01
+        contrast = 1
+        popups = true
+        popups_ignorealpha = 0.6
+    }
+  active_opacity = 1.0
+  inactive_opacity = 0.70
 }
