--- a/dot_config/hypr/custom/rules.conf
+++ b/dot_config/hypr/custom/rules.conf
@@ -1,3 +1,5 @@
 # You can put custom rules here
 # Window/layer rules: https://wiki.hyprland.org/Configuring/Window-Rules/
 # Workspace rules: https://wiki.hyprland.org/Configuring/Workspace-Rules/
+
+windowrulev2 = opacity 0.8, class:org.wezfurlong.wezterm
