--- a/dot_config/hypr/custom/general.conf
+++ b/dot_config/hypr/custom/general.conf
@@ -1,7 +1,9 @@
 # Put general config stuff here
 # Here's a list of every variable: https://wiki.hyprland.org/Configuring/Variables/
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
-monitor= eDP-1 ,2880x1800@60,auto,1
+monitor= eDP-1 ,2880x1800@60, auto,1
+monitor = DP-3 ,2560x1440@75, 0x0, 1
+monitor = DP-1 ,1920x1080@165, 2560x200, 1
 monitor = , preferred, auto, 1, mirror, eDP-1
 
 
