--- a/dot_config/hypr/custom/rules.conf
+++ b/dot_config/hypr/custom/rules.conf
@@ -2,4 +2,14 @@
 # Window/layer rules: https://wiki.hyprland.org/Configuring/Window-Rules/
 # Workspace rules: https://wiki.hyprland.org/Configuring/Workspace-Rules/
 
-windowrulev2 = opacity 0.8, class:org.wezfurlong.wezterm
+windowrulev2 = opacity 0.9, class:org.wezfurlong.wezterm
+workspace = 1, monitor:DP-3, default:true
+workspace = 2, monitor:DP-3, default:true
+workspace = 3, monitor:DP-3, default:true
+workspace = 4, monitor:DP-3, default:true
+workspace = 5, monitor:DP-3, default:true
+workspace = 6, monitor:DP-1, default:true
+workspace = 7, monitor:DP-1, default:true
+workspace = 8, monitor:DP-1, default:true
+workspace = 9, monitor:DP-1, default:true
+workspace = 10, monitor:DP-1, default:true
