fix: remove blur from floating windows

--- a/dot_config/hypr/custom/rules.conf
+++ b/dot_config/hypr/custom/rules.conf
@@ -3,6 +3,10 @@
 # Workspace rules: https://wiki.hyprland.org/Configuring/Workspace-Rules/
 
 windowrulev2 = opacity 0.9, class:org.wezfurlong.wezterm
+windowrulev2 = noblur, opacity 1 override 1 override, floating:1
+
+# windowrule =  .* # Applies transparency to EVERY WINDOW
+
 workspace = 1, monitor:DP-3, default:true
 workspace = 2, monitor:DP-3, default:true
 workspace = 3, monitor:DP-3, default:true
