fix: full opacity for floating windows

--- a/dot_config/hypr/custom/rules.conf
+++ b/dot_config/hypr/custom/rules.conf
@@ -3,7 +3,8 @@
 # Workspace rules: https://wiki.hyprland.org/Configuring/Workspace-Rules/
 
 windowrulev2 = opacity 0.9, class:org.wezfurlong.wezterm
-windowrulev2 = noblur, opacity 1 override 1 override, floating:1
+windowrulev2 = noblur, floating:1
+windowrulev2 = opacity 2, floating:1
 
 # windowrule =  .* # Applies transparency to EVERY WINDOW
 
