fix: remove hardcoded theme

--- a/dot_config/hypr/hyprland/env.conf
+++ b/dot_config/hypr/hyprland/env.conf
@@ -12,7 +12,7 @@ env = INPUT_METHOD, fcitx
 env = QT_QPA_PLATFORM, wayland
 env = QT_QPA_PLATFORMTHEME, qt6ct
 
-env = QT_STYLE_OVERRIDE,kvantum
+# env = QT_STYLE_OVERRIDE,kvantum
 # env = WLR_NO_HARDWARE_CURSORS, 1
 
 # ######## Screen tearing #########
