fix: battery optimizations

--- a/dot_config/hypr/custom/general.conf
+++ b/dot_config/hypr/custom/general.conf
@@ -21,9 +21,20 @@ input {
   sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
+misc{
+  vfr=true
+  enable_swallow = true
+  swallow_regex = (org.wezfurlong.wezterm)
+}
+
+
+
 decoration {
+    shadow {
+      enabled=false
+    }
     blur {
-        enabled = true
+        enabled = false
         xray = true
         special = false
         new_optimizations = true
@@ -36,5 +47,5 @@ decoration {
         popups_ignorealpha = 0.6
     }
   active_opacity = 1.0
-  inactive_opacity = 0.70
+  inactive_opacity = 0.95
 }
