--- a/dot_config/hypr/custom/rules.conf
+++ b/dot_config/hypr/custom/rules.conf
@@ -2,9 +2,20 @@
 # Window/layer rules: https://wiki.hyprland.org/Configuring/Window-Rules/
 # Workspace rules: https://wiki.hyprland.org/Configuring/Workspace-Rules/
 
-windowrulev2 = opacity 0.99, class:org.wezfurlong.wezterm
-windowrulev2 = noblur, floating:1
+# windowrulev2 = opacity 0.95, class:org.wezfurlong.wezterm
+# windowrulev2 = noblur, floating:1
 windowrulev2 = opacity 2, floating:1
 
+# smart gaps
+workspace = w[tv1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0
+windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
+windowrule = rounding 0, floating:0, onworkspace:w[tv1]
+windowrule = bordersize 0, floating:0, onworkspace:f[1]
+windowrule = rounding 0, floating:0, onworkspace:f[1]
+
 # windowrule =  .* # Applies transparency to EVERY WINDOW
+
+
+source=~/.config/hypr/custom/machine-specific-rules.conf
 
