--- a/dot_config/hypr/custom/keybinds.conf
+++ b/dot_config/hypr/custom/keybinds.conf
@@ -38,25 +38,25 @@ bind = $mainMod, k, movefocus, u # Move focus up
 bind = $mainMod, j, movefocus, d # Move focus down
 
 # Resize windows
-bind = $mainMod ALT, H,resizeactive, -100 0
-bind = $mainMod ALT, L, resizeactive, 100 0
-bind = $mainMod ALT, K, resizeactive, 0 -100
-bind = $mainMod ALT, J, resizeactive, 0 100
+bind = $mainMod, Left,resizeactive, -100 0
+bind = $mainMod, Right, resizeactive, 100 0
+bind = $mainMod, Up, resizeactive, 0 -100
+bind = $mainMod, Down, resizeactive, 0 100
 
 # power button to trigger wlogout
 bind = ,xf86poweroff, exec, wlogout
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1 # Switch to workspace 1
-bind = $mainMod, 2, workspace, 2 # Switch to workspace 2
-bind = $mainMod, 3, workspace, 3 # Switch to workspace 3
-bind = $mainMod, 4, workspace, 4 # Switch to workspace 4
-bind = $mainMod, 5, workspace, 5 # Switch to workspace 5
-bind = $mainMod, 6, workspace, 6 # Switch to workspace 6
-bind = $mainMod, 7, workspace, 7 # Switch to workspace 7
-bind = $mainMod, 8, workspace, 8 # Switch to workspace 8
-bind = $mainMod, 9, workspace, 9 # Switch to workspace 9
-bind = $mainMod, 0, workspace, 10 # Switch to workspace 10
+# bind = $mainMod, 1, workspace, 1 # Switch to workspace 1
+# bind = $mainMod, 2, workspace, 2 # Switch to workspace 2
+# bind = $mainMod, 3, workspace, 3 # Switch to workspace 3
+# bind = $mainMod, 4, workspace, 4 # Switch to workspace 4
+# bind = $mainMod, 5, workspace, 5 # Switch to workspace 5
+# bind = $mainMod, 6, workspace, 6 # Switch to workspace 6
+# bind = $mainMod, 7, workspace, 7 # Switch to workspace 7
+# bind = $mainMod, 8, workspace, 8 # Switch to workspace 8
+# bind = $mainMod, 9, workspace, 9 # Switch to workspace 9
+# bind = $mainMod, 0, workspace, 10 # Switch to workspace 10
 
 # reposition windows
 bind = $mainMod SHIFT, H, movewindow, l
