--- a/hypr/custom/rules.conf
+++ b/hypr/custom/rules.conf
@@ -16,6 +16,17 @@ windowrule = rounding 0, floating:0, onworkspace:f[1]
 
 # windowrule =  .* # Applies transparency to EVERY WINDOW
 
+workspace = 1, monitor:DP3, default:true
+workspace = 2, monitor:DP3, default:true
+workspace = 3, monitor:DP3, default:true
+workspace = 4, monitor:DP3, default:true
+workspace = 5, monitor:DP3, default:true
+
+workspace = 6, monitor:DP1, default:true
+workspace = 7, monitor:DP1, default:true
+workspace = 8, monitor:DP1, default:true
+workspace = 9, monitor:DP1, default:true
+workspace = 10, monitor:DP1, default:true
 
 # source=~/dotfiles/hypr/custom/machine-specific-rules.conf
 
