--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -7,12 +7,9 @@ $font_family_clock = Rubik Light
 $font_material_symbols = Material Symbols Rounded
 
 background {
-    color = rgba(181818FF)
-    # path = {{ SWWW_WALL }}
-    
-    # path = screenshot
-    # blur_size = 15
-    # blur_passes = 4
+    path = screenshot
+    blur_size = 10
+    blur_passes = 3
 }
 input-field {
     monitor =
