--- a/dotfiles/hypr/custom/rules.conf
+++ b/dotfiles/hypr/custom/rules.conf
@@ -15,5 +15,5 @@ windowrule = bordersize 0, floating:0, onworkspace:f[1]
 windowrule = rounding 0, floating:0, onworkspace:f[1]
 
 # windowrule =  .* # Applies transparency to EVERY WINDOW
-source=~/dotfiles/hypr/custom/machine.conf
+source=~/.config/home-manager/dotfiles/hypr/custom/machine.conf
 
