--- a/dotfiles/hypr/hyprland/keybinds.conf
+++ b/dotfiles/hypr/hyprland/keybinds.conf
@@ -15,14 +15,14 @@ bind = Super, S, togglesplit, # dwindle
 
 bind = Super, Return, exec, wezterm
 bind = , Super, exec, true # Open app launcher
-bind = Ctrl+Super, T, exec, ~/dotfiles/ags/scripts/color_generation/switchwall.sh # Change wallpaper
+bind = Ctrl+Super, T, exec, ~/.config/home-manager/dotfiles/ags/scripts/color_generation/switchwall.sh # Change wallpaper
 
 ##! Actions
 # Screenshot, Record, OCR, Color picker, Clipboard history
 bind = Super, V, exec, pkill fuzzel || cliphist list | fuzzel  --match-mode fzf --dmenu | cliphist decode | wl-copy # Clipboard history >> clipboard
 bind = Super, Period, exec, pkill fuzzel || ~/.local/bin/fuzzel-emoji # Pick emoji >> clipboard
 bind = Ctrl+Shift+Alt, Delete, exec, pkill wlogout || wlogout -p layer-shell # [hidden]
-bind = Super+Shift, S, exec, ~/dotfiles/ags/scripts/grimblast.sh --freeze copy area # Screen snip
+bind = Super+Shift, S, exec, ~/.config/home-manager/dotfiles/ags/scripts/grimblast.sh --freeze copy area # Screen snip
 bind = Super+Shift+Alt, S, exec, grim -g "$(slurp)" - | swappy -f - # Screen snip >> edit
 
 # OCR
@@ -34,41 +34,41 @@ bind = Super+Shift, C, exec, hyprpicker -a # Pick color (Hex) >> clipboard
 
 # Fullscreen screenshot
 bindl=,Print,exec,grim - | wl-copy # Screenshot >> clipboard
-bindl= Ctrl,Print, exec, mkdir -p ~/Pictures/Screenshots && ~/dotfiles/ags/scripts/grimblast.sh copysave screen ~/Pictures/Screenshots/Screenshot_"$(date '+%Y-%m-%d_%H.%M.%S')".png # Screenshot >> clipboard & file
+bindl= Ctrl,Print, exec, mkdir -p ~/Pictures/Screenshots && ~/.config/home-manager/dotfiles/ags/scripts/grimblast.sh copysave screen ~/Pictures/Screenshots/Screenshot_"$(date '+%Y-%m-%d_%H.%M.%S')".png # Screenshot >> clipboard & file
 
 # Recording stuff
-bind = Super+Shift, R, exec, ~/dotfiles/ags/scripts/record-script.sh # Record region (no sound)
-bind = Ctrl+Alt, R, exec, ~/dotfiles/ags/scripts/record-script.sh --fullscreen # [hidden] Record screen (no sound)
-bind = Super+Shift+Alt, R, exec, ~/dotfiles/ags/scripts/record-script.sh --fullscreen-sound # Record screen (with sound)
+bind = Super+Shift, R, exec, ~/.config/home-manager/dotfiles/ags/scripts/record-script.sh # Record region (no sound)
+bind = Ctrl+Alt, R, exec, ~/.config/home-manager/dotfiles/ags/scripts/record-script.sh --fullscreen # [hidden] Record screen (no sound)
+bind = Super+Shift+Alt, R, exec, ~/.config/home-manager/dotfiles/ags/scripts/record-script.sh --fullscreen-sound # Record screen (with sound)
 
 
 bind = Super, Q, killactive,
 bind = Super, F, fullscreen, 0
 
 ##! Workspace navigation
-bind = Super, 1, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 1 # [hidden]
-bind = Super, 2, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 2 # [hidden]
-bind = Super, 3, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 3 # [hidden]
-bind = Super, 4, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 4 # [hidden]
-bind = Super, 5, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 5 # [hidden]
-bind = Super, 6, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 6 # [hidden]
-bind = Super, 7, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 7 # [hidden]
-bind = Super, 8, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 8 # [hidden]
-bind = Super, 9, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 9 # [hidden]
-bind = Super, 0, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 10 # [hidden]
+bind = Super, 1, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 1 # [hidden]
+bind = Super, 2, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 2 # [hidden]
+bind = Super, 3, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 3 # [hidden]
+bind = Super, 4, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 4 # [hidden]
+bind = Super, 5, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 5 # [hidden]
+bind = Super, 6, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 6 # [hidden]
+bind = Super, 7, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 7 # [hidden]
+bind = Super, 8, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 8 # [hidden]
+bind = Super, 9, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 9 # [hidden]
+bind = Super, 0, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh workspace 10 # [hidden]
 
 
 ##! Workspace management
- bind = Super+Shift, 1, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 1 # [hidden]
- bind = Super+Shift, 2, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 2 # [hidden]
- bind = Super+Shift, 3, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 3 # [hidden]
- bind = Super+Shift, 4, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 4 # [hidden]
- bind = Super+Shift, 5, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 5 # [hidden]
- bind = Super+Shift, 6, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 6 # [hidden]
- bind = Super+Shift, 7, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 7 # [hidden]
- bind = Super+Shift, 8, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 8 # [hidden]
- bind = Super+Shift, 9, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 9 # [hidden]
- bind = Super+Shift, 0, exec, ~/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 10 # [hidden]
+ bind = Super+Shift, 1, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 1 # [hidden]
+ bind = Super+Shift, 2, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 2 # [hidden]
+ bind = Super+Shift, 3, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 3 # [hidden]
+ bind = Super+Shift, 4, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 4 # [hidden]
+ bind = Super+Shift, 5, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 5 # [hidden]
+ bind = Super+Shift, 6, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 6 # [hidden]
+ bind = Super+Shift, 7, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 7 # [hidden]
+ bind = Super+Shift, 8, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 8 # [hidden]
+ bind = Super+Shift, 9, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 9 # [hidden]
+ bind = Super+Shift, 0, exec, ~/.config/home-manager/dotfiles/ags/scripts/hyprland/workspace_action.sh movetoworkspace 10 # [hidden]
 
 
 # Testing
@@ -79,8 +79,8 @@ bind = Super+Alt, Equal, exec, notify-send "Urgent notification" "Ah hell no" -u
 bindl= Super+Shift, N, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"` # Next track
 bindl= ,XF86AudioNext, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"` # [hidden]
 bindl= ,XF86AudioPrev, exec, playerctl previous # [hidden]
-bindel = Super+Shift, Comma, exec, ~/dotfiles/ags/scripts/music/adjust-volume.sh -0.03 # Raise music volume
-bindel = Super+Shift, Period, exec, ~/dotfiles/ags/scripts/music/adjust-volume.sh 0.03 # Lower music volume
+bindel = Super+Shift, Comma, exec, ~/.config/home-manager/dotfiles/ags/scripts/music/adjust-volume.sh -0.03 # Raise music volume
+bindel = Super+Shift, Period, exec, ~/.config/home-manager/dotfiles/ags/scripts/music/adjust-volume.sh 0.03 # Lower music volume
 bind = Super+Shift+Alt, mouse:275, exec, playerctl previous # [hidden]
 bind = Super+Shift+Alt, mouse:276, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"` # [hidden]
 bindl= Super+Shift, B, exec, playerctl previous # Previous track
