--- a/dotfiles/hypr/hyprland/keybinds.conf
+++ b/dotfiles/hypr/hyprland/keybinds.conf
@@ -90,6 +90,8 @@ bindl= ,XF86AudioPause, exec, playerctl play-pause # [hidden]
 
 #!
 ##! Apps
+bind = Super, A, exec, hyprpanel t notificationsmenu
+bind = Super, Escape, exec, hyprpanel t bar-0; hyprpanel t bar-1
 bind = Super, E, exec, nautilus --new-window # Launch Nautilus (file manager)
 bind = Super, I, exec, XDG_CURRENT_DESKTOP="gnome" gnome-control-center # Launch GNOME Settings
 bind = Ctrl+Super, V, exec, pavucontrol # Launch pavucontrol (volume mixer)
@@ -112,6 +114,7 @@ bind = Super, Left,resizeactive, -100 0
 bind = Super, Right, resizeactive, 100 0
 bind = Super, Up, resizeactive, 0 -100
 bind = Super, Down, resizeactive, 0 100
+
 
 # power button to trigger wlogout
 bind = ,xf86poweroff, exec, wlogout
