--- a/.gitconfig
+++ b/.gitconfig
@@ -1,16 +1,12 @@
 [credential "https://github.com"]
-	helper = 
-	helper = !/usr/bin/gh auth git-credential
+	helper = !/usr/bin/env gh auth git-credential
 [credential "https://gist.github.com"]
-	helper = 
-	helper = !/usr/bin/gh auth git-credential
+	helper = !/usr/bin/env gh auth git-credential
 [user]
 	email = cheavuthearith0@gmail.com
 	name = chea-vuthearith
 [safe]
 	directory = *
-[core]
-	editor = nvim
 [init]
 	defaultBranch = main
 [push]
