--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -5,9 +5,8 @@ bindl = Super+Shift,M, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 0% # [hidden]
 bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ # [hidden]
 bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- # [hidden]
 
-# Uncomment these if you can't get AGS to work
-# bindle=, XF86MonBrightnessUp, exec, brightnessctl set '12.75+'
-# bindle=, XF86MonBrightnessDown, exec, brightnessctl set '12.75-'
+bindle=, XF86MonBrightnessUp, exec, brightnessctl set '12.75+'
+bindle=, XF86MonBrightnessDown, exec, brightnessctl set '12.75-'
 
 bind = Super, T, togglefloating # Toggle between tiling and floating window
 bind = Super, P, pseudo, # dwindle
