fix: focus on activate false

--- a/hypr/custom/general.conf
+++ b/hypr/custom/general.conf
@@ -25,7 +25,7 @@ misc{
   vfr=true
   enable_swallow = false
   swallow_regex = (org.wezfurlong.wezterm)
-  focus_on_activate = true
+  focus_on_activate = false
 }
 
 
