feat: add fine tune controls for brightness

--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -5,8 +5,10 @@ bindl = Super+Shift,M, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 0% # [hidden]
 bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ # [hidden]
 bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- # [hidden]
 
-bindle=, XF86MonBrightnessUp, exec, brightnessctl set '21.25+'
-bindle=, XF86MonBrightnessDown, exec, brightnessctl set '21.25-'
+bindle=, XF86MonBrightnessUp, exec, brightnessctl set '5%+'
+bindle=, XF86MonBrightnessDown, exec, brightnessctl set '5%-'
+bindle= SHIFT, XF86MonBrightnessUp, exec, brightnessctl set '1%+'
+bindle= SHIFT, XF86MonBrightnessDown, exec, brightnessctl set '1%-'
 
 bind = Super, T, layoutmsg, togglefloating # Toggle between tiling and floating window
 bind = Super, P, layoutmsg, pseudo, # dwindle
