chore: remove unneeded code

--- a/hypr/hyprland/general.conf
+++ b/hypr/hyprland/general.conf
@@ -1,4 +1,11 @@
-# MONITOR CONFIG
+#deskotp
+monitor = DP-3 ,2560x1440@75, 0x0, 1
+monitor = DP-1 ,1920x1080@165, 2560x200, 1
+
+# laptop
+monitor= eDP-1 ,2880x1800@60, auto,1
+monitor = , preferred, auto, 1, mirror, eDP-1
+
 monitor=,preferred,auto,1
 # monitor=,addreserved, 0, 0, 0, 0 # Custom reserved area
 
@@ -6,6 +13,11 @@ monitor=,preferred,auto,1
 # monitor=HDMI-A-1,1920x1080@60,1920x0,1,mirror,eDP-1
 
 input {
+    kb_options = caps:swapescape
+    kb_rules =
+    follow_mouse = 0
+    accel_profile = flat
+    sensitivity = 0 # -1.0 - 1.0, 0 means no modification. 
     # Keyboard: Add a layout and uncomment kb_options for Win+Space switching shortcut
     kb_layout = us
     # kb_options = grp:win_space_toggle
@@ -14,6 +26,7 @@ input {
     repeat_rate = 35
 
     touchpad {
+        drag_lock = true
         natural_scroll = yes
         disable_while_typing = true
         clickfinger_behavior = true
@@ -72,19 +85,18 @@ dwindle {
 decoration {
     rounding = 20
     blur {
-        enabled = true
-        xray = true
-        special = false
-        new_optimizations = true
-        size = 14
-        passes = 4
         brightness = 1
-        noise = 0.01
         contrast = 1
+        enabled = true
+        new_optimizations = true
+        noise = 0.01
+        passes = 4
         popups = true
         popups_ignorealpha = 0.6
+        size = 1
+        special = false
+        xray = true
     }
-    
     # Shadow
     shadow {
         enabled = true
@@ -94,6 +106,8 @@ decoration {
         render_power = 4
         color = rgba(0000002A)
     }
+  active_opacity = 1.0
+  inactive_opacity = 0.95
 
     # Window Opacities
     # active_opacity = 1
