--- a/hypr/hyprland/rules.conf
+++ b/hypr/hyprland/rules.conf
@@ -94,3 +94,14 @@ layerrule = blur, indicator.*
 layerrule = ignorealpha 0.6, indicator.*
 layerrule = blur, osk[0-9]*
 layerrule = ignorealpha 0.6, osk[0-9]*
+
+windowrulev2 = opacity 2, floating:1
+
+# smart gaps
+workspace = w[tv1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0
+windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
+windowrule = rounding 0, floating:0, onworkspace:w[tv1]
+windowrule = bordersize 0, floating:0, onworkspace:f[1]
+windowrule = rounding 0, floating:0, onworkspace:f[1]
+
