--- a/hypr/hyprland/general.conf
+++ b/hypr/hyprland/general.conf
@@ -3,10 +3,10 @@ monitor = DP-3 ,2560x1440@75, 0x0, 1
 monitor = DP-1 ,1920x1080@165, 2560x200, 1
 
 # laptop
-monitor= eDP-1 ,2880x1800@60, auto,1
-monitor = , preferred, auto, 1, mirror, eDP-1
+monitor = eDP-1 ,2880x1800@60, auto,1
 
-monitor=,preferred,auto,1
+monitor = , preferred,auto,1
+monitor = , preferred, auto, 1, mirror, eDP-1
 # monitor=,addreserved, 0, 0, 0, 0 # Custom reserved area
 
 # HDMI port: mirror display. To see device name, use `hyprctl monitors`
@@ -18,9 +18,7 @@ input {
     follow_mouse = 0
     accel_profile = flat
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification. 
-    # Keyboard: Add a layout and uncomment kb_options for Win+Space switching shortcut
     kb_layout = us
-    # kb_options = grp:win_space_toggle
     numlock_by_default = true
     repeat_delay = 250
     repeat_rate = 35
@@ -85,9 +83,9 @@ dwindle {
 decoration {
     rounding = 20
     blur {
+        enabled = false
         brightness = 1
         contrast = 1
-        enabled = true
         new_optimizations = true
         noise = 0.01
         passes = 4
@@ -97,7 +95,6 @@ decoration {
         special = false
         xray = true
     }
-    # Shadow
     shadow {
         enabled = true
         ignore_window = true
@@ -109,18 +106,8 @@ decoration {
   active_opacity = 1.0
   inactive_opacity = 0.95
 
-    # Window Opacities
-    # active_opacity = 1
-    # inactive_opacity = 1
-    # fullscreen_opacity = 1
-    
-    # Shader
-    # screen_shader = ~/.config/hypr/shaders/nothing.frag
-    # screen_shader = ~/.config/hypr/shaders/vibrance.frag
-    
-    # Dim
     dim_inactive = false
-    dim_strength = 0.1
+    dim_strength = 0.2
     dim_special = 0
 }
 
@@ -167,25 +154,9 @@ misc {
     animate_mouse_windowdragging = false
     enable_swallow = false
     swallow_regex = (foot|kitty|allacritty|Alacritty)
-    
     disable_hyprland_logo = true
     force_default_wallpaper = 0
     new_window_takes_over_fullscreen = 2
     allow_session_lock_restore = true
-    
     initial_workspace_tracking = false
-}
-
-# Overview
-plugin {
-    hyprexpo {
-        columns = 3
-        gap_size = 5
-        bg_col = rgb(000000)
-        workspace_method = first 1 # [center/first] [workspace] e.g. first 1 or center m+1
-
-        enable_gesture = false # laptop touchpad, 4 fingers
-        gesture_distance = 300 # how far is the "max"
-        gesture_positive = false
-    }
 }
