fix: split workspaces

--- a/hypr/hyprland/general.conf
+++ b/hypr/hyprland/general.conf
@@ -160,3 +160,12 @@ misc {
     allow_session_lock_restore = true
     initial_workspace_tracking = false
 }
+
+plugin {
+    split-monitor-workspaces {
+        count = 10
+        keep_focused = 1
+        enable_notifications = 0
+        enable_persistent_workspaces = 0
+    }
+}
