--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -45,29 +45,29 @@ bind = Super, Q, killactive,
 bind = Super, F, fullscreen, 0
 
 ##! Workspace navigation
-bind = Super, 1, workspace, 1 # [hidden]
-bind = Super, 2, workspace, 2 # [hidden]
-bind = Super, 3, workspace, 3 # [hidden]
-bind = Super, 4, workspace, 4 # [hidden]
-bind = Super, 5, workspace, 5 # [hidden]
-bind = Super, 6, workspace, 6 # [hidden]
-bind = Super, 7, workspace, 7 # [hidden]
-bind = Super, 8, workspace, 8 # [hidden]
-bind = Super, 9, workspace, 9 # [hidden]
-bind = Super, 0, workspace, 10 # [hidden]
+bind = Super, 1, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh workspace 1
+bind = Super, 2, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh workspace 2
+bind = Super, 3, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh workspace 3
+bind = Super, 4, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh workspace 4
+bind = Super, 5, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh workspace 5
+bind = Super, 6, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh workspace 6
+bind = Super, 7, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh workspace 7
+bind = Super, 8, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh workspace 8
+bind = Super, 9, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh workspace 9
+bind = Super, 0, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh workspace 10
 
 
 ##! Workspace management
- bind = Super+Shift, 1, movetoworkspace, 1 # [hidden]
- bind = Super+Shift, 2, movetoworkspace, 2 # [hidden]
- bind = Super+Shift, 3, movetoworkspace, 3 # [hidden]
- bind = Super+Shift, 4, movetoworkspace, 4 # [hidden]
- bind = Super+Shift, 5, movetoworkspace, 5 # [hidden]
- bind = Super+Shift, 6, movetoworkspace, 6 # [hidden]
- bind = Super+Shift, 7, movetoworkspace, 7 # [hidden]
- bind = Super+Shift, 8, movetoworkspace, 8 # [hidden]
- bind = Super+Shift, 9, movetoworkspace, 9 # [hidden]
- bind = Super+Shift, 0, movetoworkspace, 10 # [hidden]
+ bind = Super+Shift, 1, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 1
+ bind = Super+Shift, 2, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 2
+ bind = Super+Shift, 3, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 3
+ bind = Super+Shift, 4, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 4
+ bind = Super+Shift, 5, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 5
+ bind = Super+Shift, 6, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 6
+ bind = Super+Shift, 7, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 7
+ bind = Super+Shift, 8, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 8
+ bind = Super+Shift, 9, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 9
+ bind = Super+Shift, 0, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 10
 
 
 # Testing
