--- a/hypr/hyprland/general.conf
+++ b/hypr/hyprland/general.conf
@@ -31,7 +31,6 @@ input {
         scroll_factor = 0.5
     }
     special_fallthrough = true
-    follow_mouse = 1
 }
 
 debug {
@@ -113,8 +112,8 @@ decoration {
 
 animations {
     enabled = true
+
     # Animation curves
-    
     bezier = linear, 0, 0, 1, 1
     bezier = md3_standard, 0.2, 0, 0, 1
     bezier = md3_decel, 0.05, 0.7, 0.1, 1
@@ -159,6 +158,7 @@ misc {
     new_window_takes_over_fullscreen = 2
     allow_session_lock_restore = true
     initial_workspace_tracking = false
+    mouse_move_focuses_monitor = false
 }
 
 plugin {
