fix(hyprland): layouting keybinds

--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -8,9 +8,9 @@ bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- #
 bindle=, XF86MonBrightnessUp, exec, brightnessctl set '21.25+'
 bindle=, XF86MonBrightnessDown, exec, brightnessctl set '21.25-'
 
-bind = Super, T, togglefloating # Toggle between tiling and floating window
-bind = Super, P, pseudo, # dwindle
-bind = Super, S, togglesplit, # dwindle
+bind = Super, T, layoutmsg, togglefloating # Toggle between tiling and floating window
+bind = Super, P, layoutmsg, pseudo, # dwindle
+bind = Super, S, layoutmsg, togglesplit, # dwindle
 
 bind = Super, Return, exec, wezterm
 bind = , Super, exec, true # Open app launcher
