--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -7,8 +7,8 @@ bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- #
 
 bindle=, XF86MonBrightnessUp, exec, brightnessctl set '5%+'
 bindle=, XF86MonBrightnessDown, exec, brightnessctl set '5%-'
-bindle= SHIFT, XF86MonBrightnessUp, exec, brightnessctl set '1%+'
-bindle= SHIFT, XF86MonBrightnessDown, exec, brightnessctl set '1%-'
+bindle= Shift, XF86MonBrightnessUp, exec, brightnessctl set '1%+'
+bindle= Shift, XF86MonBrightnessDown, exec, brightnessctl set '1%-'
 
 bind = Super, T, layoutmsg, togglefloating # Toggle between tiling and floating window
 bind = Super, P, layoutmsg, pseudo, # dwindle
