chore: regroup and cleanup hypr keybinds

--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -1,52 +1,29 @@
-bindl = Alt ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle # [hidden]
-bindl = Super ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle # [hidden]
-bindl = ,XF86AudioMute, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 0% # [hidden]
-bindl = Super+Shift,M, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 0% # [hidden]
-bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ # [hidden]
-bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- # [hidden]
-
-bindle=, XF86MonBrightnessUp, exec, brightnessctl set '5%+'
-bindle=, XF86MonBrightnessDown, exec, brightnessctl set '5%-'
-bindle= Shift, XF86MonBrightnessUp, exec, brightnessctl set '1%+'
-bindle= Shift, XF86MonBrightnessDown, exec, brightnessctl set '1%-'
-
-bind = Super, T, layoutmsg, togglefloating # Toggle between tiling and floating window
-bind = Super, P, layoutmsg, pseudo, # dwindle
-bind = Super, S, layoutmsg, togglesplit, # dwindle
-
-bind = Super, Return, exec, wezterm
-bind = , Super, exec, true # Open app launcher
-bind = Ctrl+Super, T, exec, ~/dotfiles/scripts/color_generation/switchwall.sh # Change wallpaper
-
-##! Actions
+##! Utilities
 # Screenshot, Record, OCR, Color picker, Clipboard history
-bind = Super, V, exec, pkill fuzzel || cliphist list | fuzzel  --match-mode fzf --dmenu | cliphist decode | wl-copy # Clipboard history >> clipboard
-bind = Super, Period, exec, pkill fuzzel || ~/dotfiles/scripts/fuzzel-emoji # Pick emoji >> clipboard
-bind = Ctrl+Shift+Alt, Delete, exec, pkill wlogout || wlogout -p layer-shell # [hidden]
-bind = Super+Shift, S, exec, ~/dotfiles/scripts/grimblast.sh --freeze copy area # Screen snip
-bind = Super+Shift+Alt, S, exec, grim -g "$(slurp)" - | swappy -f - # Screen snip >> edit
+bind = Super, V, exec, pkill fuzzel || cliphist list | fuzzel  --match-mode fzf --dmenu | cliphist decode | wl-copy
+bind = Super, Period, exec, pkill fuzzel || ~/dotfiles/scripts/fuzzel-emoji
+bind = Ctrl+Shift+Alt, Delete, exec, pkill wlogout || wlogout -p layer-shell
+bind = Super+Shift, S, exec, ~/dotfiles/scripts/grimblast.sh --freeze copy area
+bind = Super+Shift+Alt, S, exec, grim -g "$(slurp)" - | swappy -f -
 
 # OCR
-bind = Super+Shift,T,exec,grim -g "$(slurp $SLURP_ARGS)" "tmp.png" && tesseract -l eng "tmp.png" - | wl-copy && rm "tmp.png" # Screen snip to text >> clipboard
-bind = Ctrl+Super+Shift,S,exec,grim -g "$(slurp $SLURP_ARGS)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png" # [hidden]
+bind = Super+Shift,T,exec,grim -g "$(slurp $SLURP_ARGS)" "tmp.png" && tesseract -l eng "tmp.png" - | wl-copy && rm "tmp.png"
+bind = Ctrl+Super+Shift,S,exec,grim -g "$(slurp $SLURP_ARGS)" "tmp.png" && tesseract "tmp.png" - | wl-copy && rm "tmp.png"
 
 # Color picker
-bind = Super+Shift, C, exec, hyprpicker -a # Pick color (Hex) >> clipboard
+bind = Super+Shift, C, exec, hyprpicker -a
 
 # Fullscreen screenshot
-bindl=,Print,exec,grim - | wl-copy # Screenshot >> clipboard
-bindl= Ctrl,Print, exec, mkdir -p ~/Pictures/Screenshots && ~/dotfiles/scripts/grimblast.sh copysave screen ~/Pictures/Screenshots/Screenshot_"$(date '+%Y-%m-%d_%H.%M.%S')".png # Screenshot >> clipboard & file
+bindl=,Print,exec,grim - | wl-copy
+bindl= Ctrl,Print, exec, mkdir -p ~/Pictures/Screenshots && ~/dotfiles/scripts/grimblast.sh copysave screen ~/Pictures/Screenshots/Screenshot_"$(date '+%Y-%m-%d_%H.%M.%S')".png
 
 # Recording stuff
-bind = Super+Shift, R, exec, ~/dotfiles/scripts/record-script.sh # Record region (no sound)
-bind = Ctrl+Alt, R, exec, ~/dotfiles/scripts/record-script.sh --fullscreen # [hidden] Record screen (no sound)
-bind = Super+Shift+Alt, R, exec, ~/dotfiles/scripts/record-script.sh --fullscreen-sound # Record screen (with sound)
+bind = Super+Shift, R, exec, ~/dotfiles/scripts/record-script.sh
+bind = Ctrl+Alt, R, exec, ~/dotfiles/scripts/record-script.sh --fullscreen
+bind = Super+Shift+Alt, R, exec, ~/dotfiles/scripts/record-script.sh --fullscreen-sound
 
-
-bind = Super, Q, killactive,
-bind = Super, F, fullscreen, 0
-
-##! Workspace navigation
+##! Workspace
+# navigation
 bind = Super, 1, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh workspace 1
 bind = Super, 2, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh workspace 2
 bind = Super, 3, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh workspace 3
@@ -58,57 +35,64 @@ bind = Super, 8, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh workspace
 bind = Super, 9, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh workspace 9
 bind = Super, 0, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh workspace 10
 
-
-##! Workspace management
- bind = Super+Shift, 1, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 1
- bind = Super+Shift, 2, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 2
- bind = Super+Shift, 3, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 3
- bind = Super+Shift, 4, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 4
- bind = Super+Shift, 5, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 5
- bind = Super+Shift, 6, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 6
- bind = Super+Shift, 7, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 7
- bind = Super+Shift, 8, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 8
- bind = Super+Shift, 9, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 9
- bind = Super+Shift, 0, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 10
-
-
-# Testing
-bind = Super+Alt, f12, exec, notify-send 'Test notification' "Here's a really long message to test truncation and wrapping\nYou can middle click or flick this notification to dismiss it!" -a 'Shell' -A "Test1=I got it!" -A "Test2=Another action" -t 5000 # [hidden]
-bind = Super+Alt, Equal, exec, notify-send "Urgent notification" "Ah hell no" -u critical -a 'Hyprland keybind' # [hidden]
+# management
+bind = Super+Shift, 1, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 1
+bind = Super+Shift, 2, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 2
+bind = Super+Shift, 3, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 3
+bind = Super+Shift, 4, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 4
+bind = Super+Shift, 5, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 5
+bind = Super+Shift, 6, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 6
+bind = Super+Shift, 7, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 7
+bind = Super+Shift, 8, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 8
+bind = Super+Shift, 9, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 9
+bind = Super+Shift, 0, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 10
 
 ##! Media
-bindl= Super+Shift, N, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"` # Next track
-bindl= ,XF86AudioNext, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"` # [hidden]
-bindl= ,XF86AudioPrev, exec, playerctl previous # [hidden]
-bindel = Super+Shift, Comma, exec, ~/dotfiles/scripts/music/adjust-volume.sh -0.03 # Raise music volume
-bindel = Super+Shift, Period, exec, ~/dotfiles/scripts/music/adjust-volume.sh 0.03 # Lower music volume
-bind = Super+Shift+Alt, mouse:275, exec, playerctl previous # [hidden]
-bind = Super+Shift+Alt, mouse:276, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"` # [hidden]
-bindl= Super+Shift, B, exec, playerctl previous # Previous track
-bindl= Super+Shift, P, exec, playerctl play-pause # Play/pause media
-bindl= ,XF86AudioPlay, exec, playerctl play-pause # [hidden]
-bindl= ,XF86AudioPause, exec, playerctl play-pause # [hidden]
+bindl= Super+Shift, N, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
+bindl= ,XF86AudioNext, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
+bindl= ,XF86AudioPrev, exec, playerctl previous
+bindel = Super+Shift, Comma, exec, ~/dotfiles/scripts/music/adjust-volume.sh -0.03
+bindel = Super+Shift, Period, exec, ~/dotfiles/scripts/music/adjust-volume.sh 0.03
+bind = Super+Shift+Alt, mouse:275, exec, playerctl previous
+bind = Super+Shift+Alt, mouse:276, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
+bindl= Super+Shift, B, exec, playerctl previous
+bindl= Super+Shift, P, exec, playerctl play-pause
 
-#!
+##! System Controls
+bindl = Alt ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle
+bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindle=, XF86MonBrightnessUp, exec, brightnessctl set '5%+'
+bindle=, XF86MonBrightnessDown, exec, brightnessctl set '5%-'
+bindle= Shift, XF86MonBrightnessUp, exec, brightnessctl set '1%+'
+bindle= Shift, XF86MonBrightnessDown, exec, brightnessctl set '1%-'
+bind = ,XF86Poweroff, exec, wlogout
+bindl= ,XF86AudioPlay, exec, playerctl play-pause
+bindl= ,XF86AudioPause, exec, playerctl play-pause
+
 ##! Apps
 bind = Super, A, exec, hyprpanel t notificationsmenu
 bind = Super, Escape, exec, hyprpanel t bar-0; hyprpanel t bar-1
-bind = Super, E, exec, nautilus --new-window # Launch Nautilus (file manager)
-bind = Super, I, exec, XDG_CURRENT_DESKTOP="gnome" gnome-control-center # Launch GNOME Settings
-bind = Ctrl+Super, V, exec, pavucontrol # Launch pavucontrol (volume mixer)
-# bind = Ctrl+Super+Shift, V, exec, easyeffects # Launch EasyEffects (equalizer & other audio effects)
-bind = Ctrl+Shift, Escape, exec, gnome-system-monitor # Launch GNOME System monitor
-bindir = Super, Super_L, exec, fuzzel || pkill fuzzel  # Toggle fallback launcher: fuzzel
+bind = Super, E, exec, nautilus --new-window
+# bind = Super, I, exec, XDG_CURRENT_DESKTOP="gnome" gnome-control-center
+bind = Ctrl+Super, V, exec, pavucontrol
+# bind = Ctrl+Super+Shift, V, exec, easyeffects
+# bind = Ctrl+Shift, Escape, exec, gnome-system-monitor
+bindir = Super, Super_L, exec, fuzzel || pkill fuzzel 
+bind = Super, B, exec, brave -enable-features=UseOzonePlatform --ozone-platform=wayland –-test-type
+bind = Super, Return, exec, wezterm
+bind = Ctrl+Super, T, exec, ~/dotfiles/scripts/color_generation/switchwall.sh
 
+##! Layout
+bind = Super, Q, killactive,
+bind = Super, F, fullscreen, 0
+bind = Super, T, layoutmsg, togglefloating
+bind = Super, P, layoutmsg, pseudo,
+bind = Super, S, layoutmsg, togglesplit,
 
-bind = Super, T, togglefloating # Toggle between tiling and floating window
-bind = Super, P, pseudo, # dwindle
-bind = Super, S, togglesplit, # dwindle
-bind = Super, B, exec, brave -enable-features=UseOzonePlatform --ozone-platform=wayland # Opens the browser
-bind = Super, h, movefocus, l # Move focus left
-bind = Super, l, movefocus, r # Move focus right
-bind = Super, k, movefocus, u # Move focus up
-bind = Super, j, movefocus, d # Move focus down
+bind = Super, h, movefocus, l
+bind = Super, l, movefocus, r
+bind = Super, k, movefocus, u
+bind = Super, j, movefocus, d
 
 # Resize windows
 bind = Super, Left,resizeactive, -100 0
@@ -116,17 +100,15 @@ bind = Super, Right, resizeactive, 100 0
 bind = Super, Up, resizeactive, 0 -100
 bind = Super, Down, resizeactive, 0 100
 
-
-# power button to trigger wlogout
-bind = ,xf86poweroff, exec, wlogout
-
-
-# # reposition windows
+# Reposition Windows
 bind = Super+Shift, H, movewindow, l
 bind = Super+Shift, L, movewindow, r
 bind = Super+Shift, K, movewindow, u
 bind = Super+Shift, J, movewindow, d
 
+bindm = Super, mouse:272, movewindow
+bindm = Super, mouse:273, resizewindow
 
-bindm = Super, mouse:272, movewindow # Move window
-bindm = Super, mouse:273, resizewindow # Resize window
+# Testing
+bind = Super+Alt, f12, exec, notify-send 'Test notification' "Here's a really long message to test truncation and wrapping\nYou can middle click or flick this notification to dismiss it!" -a 'Shell' -A "Test1=I got it!" -A "Test2=Another action" -t 5000
+bind = Super+Alt, Equal, exec, notify-send "Urgent notification" "Ah hell no" -u critical -a 'Hyprland keybind'
