feat: add audio related bindings

--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -49,17 +49,15 @@ bind = Super+Shift, 0, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh mov
 
 ##! Media
 bindl= Super+Shift, N, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
-bindl= ,XF86AudioNext, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
-bindl= ,XF86AudioPrev, exec, playerctl previous
-bindel = Super+Shift, Comma, exec, ~/dotfiles/scripts/music/adjust-volume.sh -0.03
-bindel = Super+Shift, Period, exec, ~/dotfiles/scripts/music/adjust-volume.sh 0.03
-bind = Super+Shift+Alt, mouse:275, exec, playerctl previous
-bind = Super+Shift+Alt, mouse:276, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
-bindl= Super+Shift, B, exec, playerctl previous
-bindl= Super+Shift, P, exec, playerctl play-pause
+bindl= Super+Shift, P, exec, playerctl previous
+bindl= Super+Shift, K, exec, playerctl play-pause
 
 ##! System Controls
-bindl = Alt ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle
+bindl= ,XF86AudioPrev, exec, playerctl previous
+bindl= ,XF86AudioNext, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
+bindl =, XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle
+bindl =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindle=, XF86MonBrightnessUp, exec, brightnessctl set '5%+'
 bindle=, XF86MonBrightnessDown, exec, brightnessctl set '5%-'
