fix: brave warnings

--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -76,7 +76,7 @@ bind = Ctrl+Super, V, exec, pavucontrol
 # bind = Ctrl+Super+Shift, V, exec, easyeffects
 # bind = Ctrl+Shift, Escape, exec, gnome-system-monitor
 bindir = Super, Super_L, exec, fuzzel || pkill fuzzel 
-bind = Super, B, exec, brave -enable-features=UseOzonePlatform --ozone-platform=wayland –-test-type
+bind = Super, B, exec, brave --test-type -enable-features=UseOzonePlatform --ozone-platform=wayland
 bind = Super, Return, exec, wezterm
 bind = Ctrl+Super, T, exec, ~/dotfiles/scripts/color_generation/switchwall.sh
 
