--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -57,7 +57,7 @@ bindl= ,XF86AudioPrev, exec, playerctl previous
 bindl= ,XF86AudioNext, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
 bindl =, XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle
 bindl =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1  @DEFAULT_AUDIO_SINK@ 5%+
 bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindle=, XF86MonBrightnessUp, exec, brightnessctl set '5%+'
 bindle=, XF86MonBrightnessDown, exec, brightnessctl set '5%-'
