fix: keybind conflicts

--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -48,9 +48,9 @@ bind = Super+Shift, 9, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh mov
 bind = Super+Shift, 0, exec, ~/dotfiles/scripts/hyprland/workspace_action.sh movetoworkspace 10
 
 ##! Media
-bindl= Super, N, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
-bindl= Super, P, exec, playerctl previous
-bindl= Super, K, exec, playerctl play-pause
+bindl= Super+Shift, N, exec, playerctl next || playerctl position `bc <<< "100 * $(playerctl metadata mpris:length) / 1000000 / 100"`
+bindl= Super+Shift, P, exec, playerctl previous
+bindl= Super+Shift, K, exec, playerctl play-pause
 
 ##! System Controls
 bindl= ,XF86AudioPrev, exec, playerctl previous
