feat: add dismiss notifs keybind

--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -69,6 +69,7 @@ bindl= ,XF86AudioPause, exec, playerctl play-pause
 
 ##! Apps
 bind = Super, A, exec, hyprpanel t notificationsmenu
+bind = Super, D, exec, hyprpanel cno
 bind = Super, Escape, exec, hyprpanel t bar-0; hyprpanel t bar-1
 bind = Super, E, exec, nautilus --new-window
 # bind = Super, I, exec, XDG_CURRENT_DESKTOP="gnome" gnome-control-center
