fix: layout keybinds

--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -84,9 +84,9 @@ bind = Ctrl+Super, T, exec, ~/dotfiles/scripts/color_generation/switchwall.sh
 ##! Layout
 bind = Super, Q, killactive,
 bind = Super, F, fullscreen, 0
-bind = Super, T, layoutmsg, togglefloating
-bind = Super, P, layoutmsg, pseudo,
-bind = Super, S, layoutmsg, togglesplit,
+bind = Super, T, togglefloating
+bind = Super, P, pseudo,
+bind = Super, S, togglesplit,
 
 bind = Super, h, movefocus, l
 bind = Super, l, movefocus, r
